--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,10 +24,10 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4 id=bestFriend class="modal-title"></h4>
+                                <h3 class="modal-title">Best Match!</h3>
                             </div>
                             <div class="modal-body">
-                                    
+                                <h4 id=bestFriend></h4>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -172,8 +172,6 @@
 
         $.post("/api/friends", newFriend)
          .then(function(data) {
-            console.log(data);
-            console.log("BAHL");
 
             $("#bestFriend").text(data.name);
             bestFriendImg = $("<img>");
