--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,7 +11,7 @@
     <body>
       <div class=container>
         <div class = jumbotron>
-            <h1><span class="fab fa-facebook"></span>Friend Finder</h1>
+            <h1><span class="fa fa-child"></span>Friend Finder</h1>
             <h3>Answer a few basic questions.</h3>
             <h3>Then find the friends with the greatest compatiblity</h3>
             <a href="/survey">
